Bug 499680 - `kioclient ls` returns “Please fix the "kioworker" KIO worker.” at start of output.
Summary: `kioclient ls` returns “Please fix the "kioworker" KIO worker.” at start of o...
Status: RESOLVED FIXED
Alias: None
Product: kde-cli-tools
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.2.5
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Aleix Pol
URL: https://discuss.kde.org/t/does-kf-kio...
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-08 13:20 UTC by Roke Julian Lockhart Beedell
Modified: 2025-02-10 09:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Confirmation (738.23 KB, text/html)
2025-02-08 13:20 UTC, Roke Julian Lockhart Beedell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roke Julian Lockhart Beedell 2025-02-08 13:20:47 UTC
Created attachment 178074 [details]
Confirmation

SUMMARY
-------

`kioclient ls` returns “Please fix the "kioworker" KIO worker.” at start of its output.

STEPS TO REPRODUCE
------------------

~~~sh
#!/usr/bin/env sh
kioclient ls applications:/
~~~

OBSERVED RESULT
---------------

> kf.kio.core: UDSEntry for '.' not found, creating a default one. Please fix the "kioworker" KIO worker.

EXPECTED RESULT
---------------

The desired data shouldn't be returned with that string prepended.

SOFTWARE/OS VERSIONS
--------------------

1. ~~~sh
   #!/usr/bin/env sh
   kinfo
   ~~~

2. > ~~~YAML
   > Operating System: Fedora Linux 41
   > KDE Plasma Version: 6.2.5
   > KDE Frameworks Version: 6.10.0
   > Qt Version: 6.8.2
   > Kernel Version: 6.12.11-200.fc41.x86_64 (64-bit)
   > Graphics Platform: Wayland
   > Processors: 12 × AMD Ryzen 5 7600X 6-Core Processor
   > Memory: 30.4 GiB of RAM
   > Graphics Processor: AMD Radeon RX 5700
   > ~~~

ADDITIONAL INFORMATION
----------------------

Confirmed at [`discuss.kde.org/t/25380/3`][1].

[1]: https://discuss.kde.org/t/does-kf-kio-core-udsentry-for-not-found-creating-a-default-one-please-fix-the-kioworker-kio-worker-indicate-a-fault-in-how-im-calling-it/25380/3?u=rokejulianlockhart
Comment 1 Méven Car 2025-02-08 13:27:31 UTC
The bug is in applications:/ kioworker part of plasma-workspace repository.
Comment 2 Bug Janitor Service 2025-02-09 10:59:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5178
Comment 3 Méven 2025-02-10 09:45:36 UTC
Git commit ee8609d5982961ac774bda29c24f9335608b1bad by Méven Car.
Committed on 10/02/2025 at 09:22.
Pushed by meven into branch 'master'.

kioworker applications: prevent a warning when listing

WorkerBase::listDir must return an UDSEntry for the local path '.'.

KIO prints a warning:
kf.kio.core: UDSEntry for '.' not found, creating a default one. Please fix the "kioworker" KIO worker.

M  +16   -0    kioworkers/applications/kio_applications.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/ee8609d5982961ac774bda29c24f9335608b1bad