kioworker applications: prevent a warning when listing

WorkerBase::listDir must return an UDSEntry for the local path '.'.

KIO prints a warning:
kf.kio.core: UDSEntry for '.' not found, creating a default one. Please fix the "kioworker" KIO worker.

BUG: 499680